--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button class="resetButton" onclick="resetHomeScore()">Reset score</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div id="guestScore" class="scoreTotal">0</div>
                 <div>
                     <button onclick="addOneGuest()">+1</button>
