--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
-                <div id="homeScore" class="scoreTotal">0</div>
+                <div id="homeScore" class="scoreTotal"></div>
                 <div>
                     <button onclick="addOne()">+1</button>
                     <button onclick="addTwo()">+2</button>
@@ -16,7 +16,7 @@
             </div>
             <div>
                 <h3>AWAY</h3>
-                <div id="guestScore" class="scoreTotal">0</div>
+                <div id="guestScore" class="scoreTotal"></div>
                 <div>
                     <button onclick="addOneGuest()">+1</button>
                     <button onclick="addTwoGuest()">+2</button>
